# Backend

./: .env.example  .gitignore  README.md  pyproject.toml  railway.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  issue_template.md
app/: main.py
app/api/v1/endpoints/: actor.py  auth.py  camera_session.py  feedback.py  project.py  video.py
app/core/: config.py  database.py  face_analyzer.py  s3.py  security.py
app/models/: models.py
app/prompts/: feedback_classifier.txt
app/services/: classifier.py  feedback_classify.py
pwa/: camera.html  config.js  index.html  manifest.json  service-server.js
