[tool.poetry]
name = "re-action"
version = "0.1.0"
description = "Rehearsal Feedback Platform"
authors = ["ziwon <nayanako03@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.136.1"}
uvicorn = {extras = ["standard"], version = "^0.46.0"}
sqlalchemy = "^2.0.49"
asyncpg = "^0.31.0"
alembic = "^1.18.4"
pydantic = "^2.13.4"
pydantic-settings = "^2.14.1"
python-jose = {extras = ["cryptography"], version = "^3.5.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
bcrypt = "4.0.1"
python-multipart = "^0.0.28"
aiofiles = "^25.1.0"
python-dotenv = "^1.2.2"
greenlet = "^3.5.0"
boto3 = "^1.43.6"
httpx = "^0.28.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
